<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sayyaf.homecare.accounts.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout" >

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login_button"
            android:background="@drawable/round_button_accented"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="REGISTER"
            android:background="@drawable/round_button_accented"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/progressBarColor"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:visibility="invisible"
        android:layout_above="@id/progressBarMsg"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>

    <TextView
        android:id="@+id/progressBarMsg"
        android:text="@string/progress_bar_msg"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/progressBarColor"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>