<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.sayyaf.homecare.accounts.AccountRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="30dp">


            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@android:color/white"
                android:hint="@string/register_name"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:hint="@string/register_confirm_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/caregiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:text="@string/register_caregiver"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/assistedPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/white"
                    android:text="@string/register_assisted"
                    android:textSize="18sp" />
            </RadioGroup>


            <Button
                android:id="@+id/createUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_button_accented"
                android:padding="10dp"
                android:text="@string/register_complete"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/register_to_login_transition"
                android:autoSizeMaxTextSize="20sp"
                android:singleLine="true"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>